# mint-ai

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: docker.yml
deployments/: deploy.sh
deployments/docker/: DEPLOY.md  Dockerfile  Dockerfile.app  docker-compose.yaml  docker-entrypoint.sh  init-tls.sh  nginx.conf
deployments/terraform/: infracost-report.json  main.tf  plan.json  terraform.tf  tf.plan
migrations/: env.py
migrations/versions/: 12f1dc831bdb_users_table.py  542ced273b44_transaction_schema.py  a1b2c3d4e5f6_portfolio_schema.py  a6b7c8d9e0f1_money_backups.py  b2c3d4e5f6a7_portfolios_split.py  c3d4e5f6a7b8_portfolio_snapshots.py  d4e5f6a7b8c9_category_kind.py  e083854da0a8_add_new_disabled_attribute_for_user.py  f5a6b7c8d9e0_transaction_client_id.py
scripts/: seed_assets.py
src/: app.py  create_app.py
src/api/: legal.py  privacy_policy.html
src/api/v1/: router.py
src/features/account/: deps.py  schema.py  service.py  starters.py
src/features/asset/: deps.py  schema.py  service.py  starters.py
src/features/auth/: deps.py  schema.py  service.py
src/features/category/: deps.py  (+3 more)
src/graph/: const.py  graph.py  state.py
src/infra/: config.py  container.py  database.py  deps.py
src/shared/: base_model.py  base_repo.py  base_response.py  security.py
tests/: conftest.py  test_account_deletion.py  test_asset_token.py  test_chat_schema.py  test_fx_service.py  test_holding_calc.py  test_portfolio_money.py  test_transaction_idempotency.py
(+70 files in other folders)
