[project]
name = "mint-ai"
version = "0.1.0"
description = "Personal Finance AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "dependency-injection>=1.2.0",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
]
