[project]
name = "mint-ai"
version = "0.1.0"
description = "Personal Finance AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "dependency-injection>=1.2.0",
    "dependency-injector>=4.49.0",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.3.1",
    "langchain-classic>=1.0.7",
    "langchain-google-genai>=4.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
    "langsmith>=0.8.5",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
]
